# doodleverse

./: .gitignore  App.tsx  README.md  REVIEW.md  package-lock.json  package.json  styles.css  types.ts  vite-env.d.ts  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: build-desktop.yml  deploy-pages.yml
components/: AgentChatPanel.tsx  CanvasSettings.tsx  NodeWorkflowPanel.tsx  OnboardingWizard.tsx  PromptBar.tsx  RightPanel.tsx  Toolbar.tsx  WorkspaceSidebar.tsx
components/ConfigManager/: ConfigForm.tsx  ConfigList.tsx  ConfigSelector.tsx
extension/: build.mjs  manifest.json
extension/background/: service-worker.js
extension/content/: content.css  content.js
extension/popup/: popup.css  popup.html  popup.js
hooks/: useApiKeys.ts  useCanvasInteraction.ts  useGeneration.ts
services/: aiGateway.ts  geminiService.ts  modelFetcher.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/store/: api-config-store.ts
src/types/: api-config.ts
src/utils/: api-client.ts
tests/: aiGateway.test.ts
utils/: canvasHelpers.ts  keyVault.ts  uiScale.ts
