[package]
name = "making-lovart"
version = "0.1.0"
description = "MakingLovart - AI-powered creative workspace"
authors = ["MakingLovart"]
edition = "2021"

[lib]
name = "making_lovart_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
